--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,9 @@
   --navbar-height-sticky: 65px;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -160,13 +162,12 @@ nav.sticky {
   margin: 0 auto 20px;
 
   border-radius: 50%;
-  background: linear-gradient(
-    135deg,
-    var(--color-accent),
-    var(--color-primary)
-  );
+  background: linear-gradient(135deg,
+      var(--color-accent),
+      var(--color-primary));
 
-  padding: 4px; /* ring effect */
+  padding: 4px;
+  /* ring effect */
 }
 
 .about-avatar::after {
@@ -178,7 +179,8 @@ nav.sticky {
   width: 14px;
   height: 14px;
   border-radius: 50%;
-  background: #22c55e; /* online */
+  background: #22c55e;
+  /* online */
 
   border: 2px solid var(--color-secondary);
 }
@@ -189,7 +191,8 @@ nav.sticky {
   height: 100%;
   object-fit: cover;
   border-radius: 50%;
-  background: #000; /* fallback */
+  background: #000;
+  /* fallback */
 }
 
 .about-profile h3 {
@@ -296,7 +299,7 @@ nav.sticky {
   background: #fff;
   border-radius: 16px;
 
-  box-shadow: 0 10px 25px rgba(0,0,0,0.25);
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.25);
 }
 
 #contact p {
@@ -356,16 +359,26 @@ nav.sticky {
 .hamburger.active span:nth-child(2) {
   transform: translateY(9px) rotate(45deg);
 }
+
 .hamburger.active span:nth-child(3) {
   opacity: 0;
 }
+
 .hamburger.active span:nth-child(4) {
   transform: translateY(-9px) rotate(-45deg);
 }
 
-.hamburger span:nth-child(2) { top: 0; }
-.hamburger span:nth-child(3) { top: 9px; }
-.hamburger span:nth-child(4) { top: 18px; }
+.hamburger span:nth-child(2) {
+  top: 0;
+}
+
+.hamburger span:nth-child(3) {
+  top: 9px;
+}
+
+.hamburger span:nth-child(4) {
+  top: 18px;
+}
 
 /* DOT */
 .hamburger .dot {
@@ -465,7 +478,8 @@ nav.sticky {
   }
 
   .about-intro::before {
-    display: none; /* hide chat tail */
+    display: none;
+    /* hide chat tail */
   }
 
   /* CONTACT */
@@ -540,5 +554,3 @@ nav.sticky {
     display: block;
   }
 }
-
-
