--- a/styles.css
+++ b/styles.css
@@ -319,6 +319,15 @@ nav.sticky {
   font-size: 1rem;
 }
 
+.contact-list a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.contact-list a:hover {
+    text-decoration: underline;
+}
+
 .contact-list i {
   font-size: 1.3rem;
   color: var(--color-accent);
